# webrtc_ns

./: .metadata  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/webrtc_ns_example/: MainActivity.kt
example/assets/: test.pcm
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/macos/Runner.xcodeproj/: project.pbxproj
ios/: webrtc_ns.podspec
ios/Classes/: webrtc_ns.c
lib/: webrtc_ns.dart  webrtc_ns_bindings_generated.dart
macos/: webrtc_ns.podspec
macos/Classes/: webrtc_ns.c
src/: CMakeLists.txt  webrtc_ns.c  webrtc_ns.h
